# AnyData

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
anydata/: __init__.py  exceptions.py
anydata/core/: dataapi.py  endpoint.py
anydata/engine/: functions.py  models.py
anydata/engine/prompts/: system_prompts.py  user_prompts.py
anydata/parsers/: openapi.py  response_parser.py
anydata/schemas/: core.py  openapi.py
notebooks/: anydata_DataAPI_examples.ipynb
tests/core/: test_dataapi.py  test_endpoint.py
tests/engine/functions/: test_guidance_functions.py
tests/engine/prompts/: test_user_prompts.py
tests/parsers/: test_openapi_parser.py  test_response_parser.py
