[tool.poetry]
name = "anydata"
version = "0.1.0"
description = "Smart framework to interact with and fetch data from REST APIs."
authors = ["Erich Silva <erich@esilva.io>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
guidance = "^0.1.13"
dataclasses-json = "^0.6.4"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ruff = "^0.1.0"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.0"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"anydata/engine/models.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
