[tool.poetry]
name = "anydata"
version = "0.1.1"
description = "Smart framework to interact with and fetch data from REST APIs."
authors = ["Erich Silva <erich@esilva.io>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
dataclasses-json = "^0.6.4"
pyyaml = "^6.0.1"
guidance = { version = "=0.1.13", optional = true }
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ruff = "^0.1.0"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.0"

[tool.poetry.extras]
guidance = ["guidance"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"anydata/engine/models.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
